--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/Controller/BYProtocolExplainVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/Controller/BYProtocolExplainVC.xib
@@ -687,6 +687,13 @@
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jgv-NU-vAO">
+                                    <rect key="frame" x="122" y="835" width="0.6666666666666714" height="351"/>
+                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.15193263239999999" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="0.5" id="Kg1-yq-Rq3"/>
+                                    </constraints>
+                                </view>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
@@ -788,6 +795,7 @@
                                 <constraint firstItem="iRp-YG-1up" firstAttribute="top" secondItem="B6j-6M-eba" secondAttribute="bottom" id="YF9-0d-jpz"/>
                                 <constraint firstItem="hPZ-Oh-Xbu" firstAttribute="top" secondItem="BOL-6Q-Ls5" secondAttribute="bottom" id="YwQ-cL-0K3"/>
                                 <constraint firstItem="urq-mo-zFk" firstAttribute="top" secondItem="3vW-D3-Det" secondAttribute="bottom" id="ZJr-gl-O32"/>
+                                <constraint firstItem="jgv-NU-vAO" firstAttribute="leading" secondItem="HZX-NV-wG2" secondAttribute="trailing" id="ZMZ-s3-EfE"/>
                                 <constraint firstItem="o6W-qa-HPE" firstAttribute="leading" secondItem="v3v-bU-74G" secondAttribute="leading" id="ZhA-Xi-cLx"/>
                                 <constraint firstItem="zaX-tX-Xtq" firstAttribute="leading" secondItem="mnQ-so-i5r" secondAttribute="trailing" constant="30" id="a2W-fG-dI2"/>
                                 <constraint firstAttribute="trailing" secondItem="8xf-ka-MjL" secondAttribute="trailing" id="aCL-cS-9dy"/>
@@ -869,10 +877,12 @@
                                 <constraint firstItem="tSL-vl-7TI" firstAttribute="top" secondItem="9az-bv-lZs" secondAttribute="bottom" id="uar-Nb-gJk"/>
                                 <constraint firstAttribute="height" constant="1205.5" id="unj-IA-vHI"/>
                                 <constraint firstItem="mnQ-so-i5r" firstAttribute="top" secondItem="PH1-fU-S68" secondAttribute="bottom" id="uzf-Qb-eYs"/>
+                                <constraint firstItem="jgv-NU-vAO" firstAttribute="top" secondItem="HZX-NV-wG2" secondAttribute="top" id="v3N-K4-Lfg"/>
                                 <constraint firstAttribute="trailing" secondItem="gAm-tt-l3T" secondAttribute="trailing" id="v4s-Y6-yAX"/>
                                 <constraint firstItem="RkC-1O-wUF" firstAttribute="top" secondItem="c0B-IH-FsN" secondAttribute="bottom" id="wVx-HF-riW"/>
                                 <constraint firstItem="817-A1-OSX" firstAttribute="top" secondItem="tKO-IN-g8e" secondAttribute="bottom" constant="43.5" id="wn0-MR-9hK"/>
                                 <constraint firstItem="iv9-dq-1Dk" firstAttribute="leading" secondItem="EEn-33-GcW" secondAttribute="leading" id="wys-iH-UFX"/>
+                                <constraint firstItem="jgv-NU-vAO" firstAttribute="bottom" secondItem="v3v-bU-74G" secondAttribute="bottom" id="xGe-dO-QDz"/>
                                 <constraint firstItem="2fn-fb-mg4" firstAttribute="top" secondItem="xSQ-IW-ds1" secondAttribute="bottom" id="xVI-FR-8e7"/>
                                 <constraint firstItem="UeS-AO-KLE" firstAttribute="top" secondItem="bbo-As-nAs" secondAttribute="bottom" id="xWc-O5-KK5"/>
                                 <constraint firstItem="o6W-qa-HPE" firstAttribute="leading" secondItem="tKO-IN-g8e" secondAttribute="leading" id="xuK-kZ-C2l"/>
