--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/Controller/BYRechargeUsdtVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/Controller/BYRechargeUsdtVC.xib
@@ -72,7 +72,7 @@
                         <constraint firstItem="kfu-ix-ppz" firstAttribute="leading" secondItem="Eq8-c9-ddn" secondAttribute="leading" constant="15" id="yVs-hz-qb7"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WGF-8w-zTJ">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WGF-8w-zTJ">
                     <rect key="frame" x="0.0" y="162.5" width="414" height="534"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
