--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/BYRechargeUSDTTopView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/BYRechargeUSDTTopView.xib
@@ -112,7 +112,7 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="oh3-4W-2YA">
                                             <rect key="frame" x="0.0" y="0.0" width="359" height="40"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X4V-9l-hMr" customClass="BYThreeStatusBtn">
+                                                <button opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X4V-9l-hMr" customClass="BYThreeStatusBtn">
                                                     <rect key="frame" x="0.0" y="0.0" width="113" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="nSo-Bt-Yde"/>
@@ -128,7 +128,7 @@
                                                         <action selector="didTapShortCutAmountBtn:" destination="iN0-l3-epB" eventType="touchUpInside" id="Ol7-PY-1mr"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hNo-ZA-mDA" customClass="BYThreeStatusBtn">
+                                                <button opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hNo-ZA-mDA" customClass="BYThreeStatusBtn">
                                                     <rect key="frame" x="123" y="0.0" width="113" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="owh-Sh-HHQ"/>
@@ -144,7 +144,7 @@
                                                         <action selector="didTapShortCutAmountBtn:" destination="iN0-l3-epB" eventType="touchUpInside" id="99j-2o-yvz"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TPN-BT-si5" customClass="BYThreeStatusBtn">
+                                                <button opaque="NO" tag="102" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TPN-BT-si5" customClass="BYThreeStatusBtn">
                                                     <rect key="frame" x="246" y="0.0" width="113" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="wIQ-sn-NCt"/>
@@ -165,7 +165,7 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Wld-GQ-kWs">
                                             <rect key="frame" x="0.0" y="50" width="359" height="40"/>
                                             <subviews>
-                                                <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X92-Kw-5Dg" customClass="BYThreeStatusBtn">
+                                                <button opaque="NO" tag="103" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X92-Kw-5Dg" customClass="BYThreeStatusBtn">
                                                     <rect key="frame" x="0.0" y="0.0" width="113" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="cZd-d7-eaO"/>
@@ -181,7 +181,7 @@
                                                         <action selector="didTapShortCutAmountBtn:" destination="iN0-l3-epB" eventType="touchUpInside" id="Vzx-DZ-uCZ"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kdi-s3-Fzg" customClass="BYThreeStatusBtn">
+                                                <button opaque="NO" tag="104" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kdi-s3-Fzg" customClass="BYThreeStatusBtn">
                                                     <rect key="frame" x="123" y="0.0" width="113" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="1xk-bY-fmO"/>
@@ -197,7 +197,7 @@
                                                         <action selector="didTapShortCutAmountBtn:" destination="iN0-l3-epB" eventType="touchUpInside" id="Swh-9G-aiZ"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FoY-Ld-ct9" customClass="BYThreeStatusBtn">
+                                                <button opaque="NO" tag="105" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FoY-Ld-ct9" customClass="BYThreeStatusBtn">
                                                     <rect key="frame" x="246" y="0.0" width="113" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="XwR-qK-MRk"/>
